--- a/README.org
+++ b/README.org
@@ -22,7 +22,7 @@ Instructions for installing and running the command line application are in the
 [[https://docs.xmlcalabash.com/apidocs/current/][API docs]] are available, but at this point, the API should be considered unstable
 and liable to change in arbitrary ways.
 
-| This is alpha software                                                            |
+| This is beta software                                                             |
 |-----------------------------------------------------------------------------------|
 | A lot of things work. Some don’t. Do not put this in production.                  |
 
@@ -36,13 +36,13 @@ known to be broken.
 
 XML Calabash requires Java 11 or later. Everything else is in the distribution.
 
-1. Download the [[https://github.com/xmlcalabash/xmlcalabash3/releases][latest release]]. You need ~xmlcalabash-3.0.0-alphaXX.zip~ where “XX”
+1. Download the [[https://github.com/xmlcalabash/xmlcalabash3/releases][latest release]]. You need ~xmlcalabash-3.0.0-betaXX.zip~ where “XX”
    is the release number. The other zip files on the release page are extension steps
    with additional third party dependencies. You have to download them too, if you want
    to use those steps.
 2. Unzip it somewhere on your local file system.
-3. Run ~java -jar xmlcalabash-app-3.0.0-alphaXX.jar help~ to see a quick list of the options.
-4. Run ~java -jar xmlcalabash-app-3.0.0-alphaXX.jar helloWorld.xpl~ to run the sample pipeline.
+3. Run ~java -jar xmlcalabash-app-3.0.0-betaXX.jar help~ to see a quick list of the options.
+4. Run ~java -jar xmlcalabash-app-3.0.0-betaXX.jar helloWorld.xpl~ to run the sample pipeline.
 
 There are more complete instructions in the [[https://docs.xmlcalabash.com/userguide/current/][User Guide]].
 
