--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+TITLE: 301 Moved Permanently
 
-XML Calabash development has [moved to Codeberg](https://codeberg.org/xmlcalabash/xmlcalabash3).
+XML Calabash development has [[(https://codeberg.org/xmlcalabash/xmlcalabash3][moved to Codeberg]].
 
 Apologies for any inconvenience.
